--- a/shop-keep-app/docker-compose.yml
+++ b/shop-keep-app/docker-compose.yml
@@ -45,6 +45,25 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+    mysqltest:
+        image: 'mysql/mysql-server:8.0'
+        ports:
+            - '${TEST_FORWARD_DB_PORT:-3307}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${TEST_DB_PASSWORD}'
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: '${TEST_DB_DATABASE}'
+            MYSQL_USER: '${TEST_DB_USERNAME}'
+            MYSQL_PASSWORD: '${TEST_DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        volumes:
+            - 'sail-mysql:/var/lib/mysqltest'
+        networks:
+            - sail
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-p${TEST_DB_PASSWORD}"]
+            retries: 3
+            timeout: 5s
     redis:
         image: 'redis:alpine'
         ports:
