--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,8 +16,6 @@ jobs:
       with:
         php-version: '8.0'
     - uses: actions/checkout@v2
-    - name: move to directory
-      run: cd ./shop-keep-app
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
@@ -34,4 +32,4 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: vendor/bin/pest
